<resources>
    <string name="app_name">MixiFood</string>
    <string name="account"><i>username</i></string>
    <string name="password"><i>password</i></string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="dof"><i>date of birth</i></string>
    <string name="national_id"><i>national id</i></string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="error_enter_account">Please enter your username!</string>
    <string name="error_enter_password">Please enter your password!</string>
    <string name="error_enter_acc_pass">Please enter your username, password!</string>
    <string name="add_success_employee">Add success employee!</string>
    <string name="add_failed_employee">Add failed employee!</string>
    <string name="login_success">Login successfully!</string>
    <string name="login_failed">Account, password not correct!</string>
    <string name="home_page">Home Page</string>
    <string name="menu">Menu</string>
    <string name="employee">Employee</string>
    <string name="statistic">Statistic</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new_food_table">New food table</string>
    <string name="name_food_table"><i>Name food table</i></string>
    <string name="accept">Accept</string>
    <string name="add_food_table">Add food table?</string>
    <string name="name_food_table_empty">Name food table empty!</string>
    <string name="add_success_food_table">Add success food table :</string>
    <string name="add_failed_food_table">Add failed food table!</string>
    <string name="hint_food_table">Table 01</string>
    <string name="order">Order</string>
    <string name="payment">Payment</string>
    <string name="add_menu">Add Menu</string>
    <string name="food_name"><i>food name</i></string>
    <string name="price"><i>price</i></string>
    <string name="new_menu">New menu</string>
    <string name="food_table">Food Table</string>
</resources>
