<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/colorRed"
    >
    <ImageView
        android:id="@+id/iv_register_mixifood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/iv_padding"
        android:layout_margin="@dimen/iv_margin"
        android:src="@drawable/ic_register_mixifood_3"
        android:layout_above="@+id/ln_register"
        />
    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <LinearLayout
        android:id="@+id/ln_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/ll_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <EditText
            android:id="@+id/ed_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ed_account_register_size"
            android:background="@drawable/ed_register"
            android:hint="@string/account"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/ed_padding"
            android:layout_margin="@dimen/ed_margin"
            android:drawableLeft="@drawable/ic_user"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/ed_dra_padding"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ed_password_register_size"
            android:background="@drawable/ed_register"
            android:hint="@string/password"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/ed_padding"
            android:layout_margin="@dimen/ed_margin"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/ed_dra_padding"
            android:inputType="textPassword"
            />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="2.5dp"
            android:layout_marginStart="2.5dp"
            >

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                android:textSize="@dimen/text_rbtn_size"
                android:textColor="@color/colorViolet"
                android:buttonTint="@color/colorViolet"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                android:textSize="@dimen/text_rbtn_size"
                android:textColor="@color/colorViolet"
                android:buttonTint="@color/colorViolet"
                />
        </RadioGroup>

        <EditText
        android:id="@+id/ed_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_register"
            android:hint="@string/dof"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/ed_padding"
            android:layout_margin="@dimen/ed_margin"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/ed_dra_padding"
            />

        <EditText
            android:id="@+id/ed_national_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_register"
            android:hint="@string/national_id"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/ed_padding"
            android:layout_margin="@dimen/ed_margin"
            android:drawableLeft="@drawable/ic_card"
            android:drawableStart="@drawable/ic_card"
            android:drawablePadding="@dimen/ed_dra_padding"
            android:inputType="numberDecimal"
            android:maxLength="8"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_weight="1"
                android:padding="@dimen/btn_padding"
                android:layout_margin="@dimen/btn_margin"
                android:textColor="@color/colorViolet"
                android:background="@drawable/btn_register_custom"
                />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:padding="@dimen/btn_padding"
                android:layout_margin="@dimen/btn_margin"
                android:textColor="@color/colorViolet"
                android:background="@drawable/btn_register_custom"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>