<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/colorRed"
    >
    <ImageView
        android:id="@+id/iv_login_mixifood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/iv_padding"
        android:layout_margin="@dimen/iv_margin"
        android:src="@drawable/ic_register_mixifood"
        android:layout_above="@+id/ln_login"
        />
    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <LinearLayout
        android:id="@+id/ln_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/ll_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <EditText
            android:id="@+id/ed_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_login"
            android:hint="@string/account"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/ed_padding_login"
            android:layout_margin="@dimen/ed_margin"
            android:drawableLeft="@drawable/ic_user"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/ed_dra_padding"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_login"
            android:hint="@string/password"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/ed_padding_login"
            android:layout_margin="@dimen/ed_margin"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/ed_dra_padding"
            android:inputType="textPassword"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:padding="@dimen/btn_padding"
                android:layout_margin="@dimen/btn_margin"
                android:textColor="@color/colorViolet"
                android:background="@drawable/btn_login_custom"
                />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_weight="1"
                android:padding="@dimen/btn_padding"
                android:layout_margin="@dimen/btn_margin"
                android:textColor="@color/colorViolet"
                android:background="@drawable/btn_login_custom"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>